--- a/styles/output.css
+++ b/styles/output.css
@@ -543,10 +543,6 @@ body {
   background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 }
 
-.m-6 {
-  margin: 1.5rem;
-}
-
 .m-auto {
   margin: auto;
 }
@@ -564,6 +560,10 @@ body {
   display: flex;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -574,6 +574,10 @@ body {
 
 .h-full {
   height: 100%;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-6 {
@@ -634,26 +638,8 @@ body {
   border-radius: 9999px;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
 .border {
   border-width: 1px;
-}
-
-.border-\[3px\] {
-  border-width: 3px;
-}
-
-.border-lighter-grey {
-  --tw-border-opacity: 1;
-  border-color: hsl(0 0% 98% / var(--tw-border-opacity));
-}
-
-.border-dark-greyish-blue {
-  --tw-border-opacity: 1;
-  border-color: hsl(236 9% 61% / var(--tw-border-opacity));
 }
 
 .border-light-greyish-blue {
@@ -666,36 +652,32 @@ body {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-lighter-greyish-blue {
-  --tw-bg-opacity: 1;
-  background-color: hsl(236 33% 92% / var(--tw-bg-opacity));
-}
-
 .bg-\[url\(\'\/images\/bg-desktop-light\.jpg\'\)\] {
   background-image: url('/images/bg-desktop-light.jpg');
+}
+
+.bg-\[url\(\'\/images\/icon-moon\.svg\'\)\] {
+  background-image: url('/images/icon-moon.svg');
+}
+
+.bg-contain {
+  background-size: contain;
 }
 
 .bg-cover {
   background-size: cover;
 }
 
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
+.p-1 {
+  padding: 0.25rem;
 }
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-4 {
@@ -706,14 +688,6 @@ body {
   padding: 1.5rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
-}
-
 .p-\[6px\] {
   padding: 6px;
 }
@@ -721,11 +695,6 @@ body {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .text-4xl {
@@ -746,6 +715,36 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -758,4 +757,37 @@ body {
 
 .hover\:opacity-80:hover {
   opacity: 0.8;
+}
+
+:is(.dark .dark\:bg-darker-greyish-blue) {
+  --tw-bg-opacity: 1;
+  background-color: hsl(235 19% 35% / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-dark-blue-dark) {
+  --tw-bg-opacity: 1;
+  background-color: hsl(235 21% 11% / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-darker-desaturated-blue-dark) {
+  --tw-bg-opacity: 1;
+  background-color: hsl(235 24% 19% / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-\[url\(\'\/images\/icon-sun\.svg\'\)\]) {
+  background-image: url('/images/icon-sun.svg');
+}
+
+:is(.dark .dark\:bg-\[url\(\'\/images\/bg-desktop-dark\.jpg\'\)\]) {
+  background-image: url('/images/bg-desktop-dark.jpg');
+}
+
+:is(.dark .dark\:text-dark-greyish-blue-dark) {
+  --tw-text-opacity: 1;
+  color: hsl(234 11% 52% / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-light-greyish-blue-dark) {
+  --tw-text-opacity: 1;
+  color: hsl(234 39% 85% / var(--tw-text-opacity));
 }
