Add bottom navigation

--- a/styles/input.css
+++ b/styles/input.css
@@ -12,4 +12,7 @@
   .check-color {
     background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
   }
+  .selected {
+    @apply text-primary;
+  }
 }
