--- a/styles/input.css
+++ b/styles/input.css
@@ -6,6 +6,13 @@
   body {
     @apply text-lg;
   }
+  *::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0);
+  }
+  *::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.15);
+    border-radius: 9999px;
+  }
 }
 
 @layer components {
@@ -14,5 +21,8 @@
   }
   .selected {
     @apply text-primary;
+  }
+  .scrollable::-webkit-scrollbar {
+    width: 0.25rem;
   }
 }
