--- a/styles/input.css
+++ b/styles/input.css
@@ -13,6 +13,9 @@
     background-color: rgba(0, 0, 0, 0.15);
     border-radius: 9999px;
   }
+  * {
+    transition-duration: 0.5s;
+  }
 }
 
 @layer components {
